chore: update lang data

--- a/lang/en/pages.json
+++ b/lang/en/pages.json
@@ -27,7 +27,7 @@
 			"download": "Download CV.",
 			"hire": "Hire Me"
 		},
-		"project": {
+		"experience": {
 			"title": "Projects",
 			"description":
 				"Die CI Farben von Millhaus sind schwarz . Nett aber auch herausfoernd. Anfangs probierten, uns abert z.",
