--- a/lang/en/pages.json
+++ b/lang/en/pages.json
@@ -1,11 +1,14 @@
 {
 	"index": {
 		"banner": {
-			"title": "I Am Hamid Develope Quality",
+			"title": "I Am Hamid",
 			"strings": [
-				"Website<i>.</i>",
-				"Mobile App<i>.</i>",
-				"Landing Page<i>.</i>"
+				"Developer<i>.</i>",
+				"OpenSource lover<i>.</i>",
+				"Essentialism<i>.</i>",
+				"Reading lover<i>.</i>",
+				"Very regular<i>.</i>",
+				"Hardworker<i>.</i>"
 			]
 		},
 		"about": {
@@ -25,114 +28,184 @@
 				}
 			],
 			"download": "Download CV.",
-			"hire": "Hire Me"
+			"hire": "Contact US"
+		},
+		"skill": {
+			"title": "Skills",
+			"items": [
+				{
+					"title": "FrontEnd",
+					"items": [
+						{ "title": "JavaScript", "percent": 80 },
+						{ "title": "HTML", "percent": 90 },
+						{ "title": "CSS", "percent": 90 },
+						{ "title": "ES6 / ES7 / ES8", "percent": 95 },
+						{ "title": "Git", "percent": 90 },
+						{ "title": "Vue.js", "percent": 95 },
+						{ "title": "Nuxt.js", "percent": 95 },
+						{ "title": "WebSocket", "percent": 60 },
+						{ "title": "SCSS", "percent": 70 },
+						{ "title": "LESS", "percent": 50 },
+						{ "title": "Webpack", "percent": 30 },
+						{ "title": "JQuery", "percent": 95 },
+						{ "title": "Vuex", "percent": 70 },
+						{ "title": "Jest", "percent": 50 },
+						{ "title": "Cypress", "percent": 40 },
+						{ "title": "Puppeteer", "percent": 40 },
+						{ "title": "WebScrapping", "percent": 60 },
+						{ "title": "Electron.js", "percent": 30 },
+						{ "title": "Bootstrap", "percent": 100 },
+						{ "title": "Vuetify", "percent": 80 },
+						{ "title": "ElementUI", "percent": 80 },
+						{ "title": "TailwinCSS", "percent": 70 },
+						{ "title": "MaterialUI", "percent": 70 },
+						{ "title": "Balma", "percent": 50 },
+						{ "title": "WebRTC", "percent": 50 },
+						{ "title": "PWA", "percent": 50 },
+						{ "title": "ServiceWorker", "percent": 50 },
+						{ "title": "PWA", "percent": 50 },
+						{ "title": "FireBase", "percent": 30 }
+					]
+				},
+				{
+					"title": "BackEnd",
+					"items": [
+						{ "title": "PHP", "percent": 60 },
+						{ "title": "Laravel", "percent": 80 },
+						{ "title": "Node.js", "percent": 60 },
+						{ "title": "Express", "percent": 20 },
+						{ "title": "CPlusPlus", "percent": 25 },
+						{ "title": "Golang", "percent": 15 },
+						{ "title": "Git", "percent": 90 },
+						{ "title": "MongoDB", "percent": 50 },
+						{ "title": "MySql", "percent": 70 },
+						{ "title": "MariaDB", "percent": 70 },
+						{ "title": "Redis", "percent": 50 },
+						{ "title": "Redis", "percent": 50 },
+						{ "title": "Redis", "percent": 50 },
+						{ "title": "Redis", "percent": 50 }
+					]
+				},
+				{
+					"title": "DevOps",
+					"items": [
+						{ "title": "Nginx", "percent": 70 },
+						{ "title": "Docker", "percent": 50 },
+						{ "title": "Kubernetes", "percent": 10 },
+						{ "title": "Openshift", "percent": 10 },
+						{ "title": "JamStack", "percent": 60 },
+						{ "title": "Docker Swarm", "percent": 60 },
+						{ "title": "GitLab CI/CD", "percent": 60 }
+					]
+				},
+				{
+					"title": "Operating System",
+					"items": [
+						{ "title": "Windows", "percent": 10, "subtitle": "16 Years" },
+						{ "title": "Linux", "percent": 10, "subtitle": "5 Years" },
+						{ "title": "MacOS", "percent": 10, "subtitle": "3 Years" }
+					]
+				}
+			]
 		},
 		"experience": {
-			"title": "Projects",
-			"description":
-				"Die CI Farben von Millhaus sind schwarz . Nett aber auch herausfoernd. Anfangs probierten, uns abert z.",
-			"gallery": "View Gallery",
+			"title": "Experience",
 			"tabs": [
-				{ "title": "Recent.", "filter": "recent" },
-				{ "title": "FrontEnd.", "filter": "frontend" },
-				{ "title": "FullStack.", "filter": "fullstack" },
-				{ "title": "All.", "filter": null }
+				{ "title": "All.", "filter": null },
+				{ "title": "Active.", "filter": "active" },
+				{ "title": "Full Time.", "filter": "full-time" },
+				{ "title": "Self Employed.", "filter": "self-employed" },
+				{ "title": "Contract.", "filter": "contract" },
+				{ "title": "Freelance.", "filter": "freelance" }
 			],
 			"items": [
 				{
-					"title": "Railive",
-					"subtitle": "Online video platform",
-					"time": "Mar 2020 – Present",
-					"tags": ["recent", "frontend"],
+					"title": "Melodyo",
+					"subtitle": "اپلیکیشن موسیقی بی کلام",
+					"time": "Sep 2020 - Present",
+					"type": "self-employed",
+					"tags": ["self-employed", "active"],
+					"position": "Full Stack Engineer",
 					"description":
-						"RaiLive is an online video event service that allows users to live classes and events live. In this project, I was responsible for managing the front-end programming team using vue.js and nuxt.js to build the website."
+					"اپلیکیشن موسیقی بی کلام ملودیو که در این پروژه من وظیفه برنامه نویسی بک اند و فرانت اند و همچنین کار های دواپس پروژه را بر عهده داشتم."
 				},
 				{
-					"title": "Gerama",
-					"subtitle": "Music application",
-					"time": "Jun 2019 – Feb 2020",
-					"tags": ["recent", "fullstack"],
+					"title": "Alibaba",
+					"subtitle": "Alibaba Travels Co.",
+					"time": "Oct 2020 - Present",
+					"type": "full-time",
+					"tags": ["full-time", "active"],
+					"position": "FrontEnd Developer",
+					"description": "توسعه دهنده فرانت اند در بخش پرواز داخلی و خارجی و کمک در توسعه وب سایت جدید علی بابا."
+				},
+				{
+					"title": "PaaSta",
+					"subtitle": "PaaSta Cloud Platform",
+					"time": "May 2020 - Present",
+					"type": "self-employed",
+					"tags": ["self-employed", "active"],
+					"position": "FrontEnd Developer",
 					"description":
-						"Creating a crawler robot to scrapping music related sites and automatically generate music content and albums."
+					"پاستا فعالیت خود را در مسابقه برنامه نویسی ArvanCloud آغاز کرد و با تلاش اعضای تیم محصولی را تولید کردیم که استفاده از خدمات PaaS را تسهیل می کند. این محصول به شما کمک می کند بدون استفاده از ابزارهای یادگیری مانند Docker و Kubernetes ، منابع خود را به برنامه ها تبدیل کرده و برنامه های خود را در سرورهای PaaS مستقر کنید.\nپاستا در مسابقه ابر بازی ArvanCloud موفق به کسب رتبه دوم و همچنین در رویداد الکامپ استارز 1399 موفق به کسب رتبه دوم شد."
+				},
+				{
+					"title": "Basalam",
+					"subtitle": "Social Marketplace",
+					"time": "Jun 2020 - Oct 2020",
+					"type": "contract",
+					"tags": ["contract"],
+					"position": "FrontEnd Consultant",
+					"description":
+					"مشاوره تیم FrontEnd شرکت باسلام در مورد بازنویسی کد و انتقال آن به Nuxt.js."
+				},
+				{
+					"title": "Raimun",
+					"subtitle": "Computer Software",
+					"time": "Mar 2020 - Sep 2020",
+					"type": "full-time",
+					"tags": ["full-time"],
+					"position": "FrontEnd Team Lead",
+					"description":
+					"Raimun یک شرکت هولدینگ نرم افزار است و دارای نرم افزار در زمینه های مختلف فنی مانند RaiLive ، RaiHost ، RaiQ ، RaiArt است.\nدر ابتدا در سمت برنامه نویس فرانت اند و در نهایت به عنوان مدیر تیم فرانت اند فعالیت کردم."
 				},
 				{
 					"title": "TarHan",
-					"subtitle": "Online graphic platform",
-					"time": "Jun 2017 – Feb 2020",
-					"tags": ["frontend"],
+					"subtitle": "Online Graphic Platform",
+					"time": "Jul 2017 - Mar 2020",
+					"type": "full-time",
+					"tags": ["full-time"],
+					"position": "Head of Tech",
 					"description":
-						"A massive project to build a design and printing platform."
-				},
-				{
-					"title": "IranGFX",
-					"subtitle": "Graphic store",
-					"time": "Dec 2019 – Feb 2020",
-					"tags": ["recent", "fullstack"],
-					"description":
-						"Creating an automated content production app for IranGFX site."
+					"پلت فرم طراحی و چاپ آنلاین که هدف آن اصلاح ساختارهای چاپی و طراحی موجود در بازار است.\nبرنامه نویسی پلتفرم طراحان و سایر اپلیکیشن های مجموعه."
 				},
 				{
 					"title": "OpenGate",
 					"subtitle": "Doctors office management",
-					"time": "Aug 2019 – Feb 2020",
-					"tags": ["frontend"],
+					"time": "Sep 2019 - Feb 2020",
+					"type": "freelance",
+					"tags": ["freelance"],
+					"position": "FrontEnd Developer",
 					"description":
-						"Front-end developer and consultant on building a doctor's office management project with the OpenGate team."
+					"پروژه ای برای مدیریت امور بیماران که برخی خدمات را برای پزشکان فراهم می کند.\nدر این پروژه برنامه نویسی فرانت اند پنل بک آفیس و مینی وب سایت مطب پزشکان را بر عهده داشتم."
 				},
 				{
 					"title": "CafiMafi",
-					"subtitle": "Coffee Store",
-					"time": "Jan 2019 – Aug 2019",
-					"tags": ["recent", "fullstack"],
-					"description": "Online coffee store"
+					"subtitle": "Online Coffee and accessories shop",
+					"time": "Dec 2018 - Oct 2019",
+					"type": "freelance",
+					"tags": ["freelance"],
+					"position": "FrontEnd Developer",
+					"description": "کافی مافی یک فروشگاه آنلاین است که کالاهای ضروری قهوه و کافه را می فروشد. برنامه نویسی کامل فرانت اند این پروژه و بخشی از بک اند این پروژه توسط من انجام شده است."
 				},
 				{
 					"title": "PiroArch",
 					"subtitle": "Auto Desk Inventor Add-ons",
-					"time": "Feb 2015 – Mar 2016",
-					"tags": [],
+					"time": "Jun 2016 - Aug 2016",
+					"type": "freelance",
+					"tags": ["freelance"],
+					"position": "مهندس نرم افزار",
 					"description":
-						"An in-depth development project developed by the Inventor engineering software to create plugins to increase the speed of manufacturing and manufacturing of industrial components. This project is due to the fact that in Iran and even in the world people are a bit fluent in this technology and can completely personalize software engineering and take activities that may take normal time-consuming time in one Click to implement."
-				},
-				{
-					"title": "Fanous",
-					"subtitle": "Cultural complex",
-					"time": "Oct 2017 – Mar 2018",
-					"tags": ["fullstack"],
-					"description":
-						"Web Project for Travel Management and Accounting for the Fanous Cultural Complex."
-				},
-				{
-					"title": "Fatemioun",
-					"subtitle": "Family loan",
-					"time": "Oct 2017 – Feb 2018",
-					"tags": ["fullstack"],
-					"description":
-						"Web-Based Project for Managing and Accounting for Fatemioun's Family Loan. It is written in PHP and the Laravel framework using the CSS Framework Semantic UI."
-				},
-				{
-					"title": "Mail Application",
-					"subtitle": "University project",
-					"time": "Jun 2016 – Jun 2016",
-					"tags": [],
-					"description":
-						"A Socket Programming-based project, with ++ c, should connect multiple clients simultaneously with the server. In this project, we used Library SDL for ++ C to create the UI in the client, and we also used the material design philosophy to create a graphical look."
-				},
-				{
-					"title": "Plate recognition",
-					"subtitle": "University project",
-					"time": "Mar 2016 – Mar 2016",
-					"tags": ["small"],
-					"description":
-						"A university project in C++ is used to recognize the plaque in the image and read the full license plate number, and is used to process the image from Library OpenCV, Google Tesseract."
-				},
-				{
-					"title": "Restaurant Management",
-					"subtitle": "University project",
-					"time": "Dec 2015 – Jan 2016",
-					"tags": ["small"],
-					"description":
-						"One of the development projects that we had to write with the C++ system was the CMS."
+					"یک پروژه توسعه عمیق ساخته شده توسط نرم افزار مهندسی Inventor برای ایجاد پلاگین هایی برای افزایش سرعت ساخت و تولید قطعات صنعتی. این پروژه به این دلیل است که در ایران و حتی در جهان مردم کمی به این فن آوری تسلط دارند و می توانند مهندسی نرم افزار را کاملا شخصی سازی کنند و فعالیت هایی را انجام دهند که ممکن است با یک کلیک زمان ببرد و زمانبر باشد."
 				}
 			]
 		},
@@ -152,75 +225,6 @@
 					"description":
 						"Extreme attention to detail is the essence of et Boo’s unique design concepts. In mals alienum scripserit sea, in alia aliquid nec",
 					"icon": ""
-				}
-			]
-		},
-		"skill": {
-			"title": "Skills",
-			"items": [
-				{
-					"title": "FrontEnd",
-					"items": [
-						{ "title": "Nuxt.js", "percent": 95 },
-						{ "title": "Vue.js", "percent": 95 },
-						{ "title": "HTML", "percent": 100 },
-						{ "title": "CSS", "percent": 100 },
-						{ "title": "SCSS", "percent": 70 },
-						{ "title": "LESS", "percent": 50 },
-						{ "title": "Webpack", "percent": 30, "subtitle": "" },
-						{ "title": "JQuery", "percent": 95, "subtitle": "" },
-						{ "title": "Vuex", "percent": 70, "subtitle": "" },
-						{ "title": "JavaScript", "percent": 100, "subtitle": "" },
-						{ "title": "ES6 / ES7 / ES8", "percent": 90, "subtitle": "" },
-						{ "title": "Jest", "percent": 50, "subtitle": "" },
-						{ "title": "Cypress", "percent": 40, "subtitle": "" },
-						{ "title": "Puppeteer", "percent": 40, "subtitle": "" },
-						{ "title": "WebScrapping", "percent": 60, "subtitle": "" },
-						{ "title": "Electron.js", "percent": 30, "subtitle": "" },
-						{ "title": "Bootstrap", "percent": 100, "subtitle": "" },
-						{ "title": "Vuetify", "percent": 80, "subtitle": "" },
-						{ "title": "ElementUI", "percent": 80, "subtitle": "" },
-						{ "title": "TailwinCSS", "percent": 70, "subtitle": "" },
-						{ "title": "MaterialUI", "percent": 70, "subtitle": "" },
-						{ "title": "Balma", "percent": 50, "subtitle": "" },
-						{ "title": "WebRTC", "percent": 50, "subtitle": "" },
-						{ "title": "ServiceWorker", "percent": 50, "subtitle": "" },
-						{ "title": "PWA", "percent": 50, "subtitle": "" },
-						{ "title": "WebSocket", "percent": 30, "subtitle": "" },
-						{ "title": "FireBase", "percent": 30, "subtitle": "" }
-					]
-				},
-				{
-					"title": "BackEnd",
-					"items": [
-						{ "title": "PHP", "percent": 60, "subtitle": "" },
-						{ "title": "Laravel", "percent": 70, "subtitle": "" },
-						{ "title": "Node.js", "percent": 50, "subtitle": "" },
-						{ "title": "MongoDB", "percent": 50, "subtitle": "" },
-						{ "title": "Git", "percent": 90, "subtitle": "" },
-						{ "title": "MySql", "percent": 70, "subtitle": "" },
-						{ "title": "Redis", "percent": 50, "subtitle": "" }
-					]
-				},
-				{
-					"title": "DevOps",
-					"items": [
-						{ "title": "Nginx", "percent": 70, "subtitle": "" },
-						{ "title": "Docker", "percent": 50, "subtitle": "" },
-						{ "title": "Kubernetes", "percent": 10, "subtitle": "" },
-						{ "title": "Openshift", "percent": 10, "subtitle": "" },
-						{ "title": "JamStack", "percent": 60, "subtitle": "" },
-						{ "title": "GitLab CI/CD", "percent": 60, "subtitle": "" }
-					]
-				},
-				{
-					"title": "Operating System",
-					"items": [
-						{ "title": "Macintosh", "percent": 10, "subtitle": "2 Year" },
-						{ "title": "CentOS", "percent": 10, "subtitle": "3 Year" },
-						{ "title": "Ubuntu", "percent": 10, "subtitle": "5 Year" },
-						{ "title": "Windows", "percent": 10, "subtitle": "15 Year" }
-					]
 				}
 			]
 		},
