--- a/lang/en/pages.json
+++ b/lang/en/pages.json
@@ -121,13 +121,13 @@
 			"items": [
 				{
 					"title": "Melodyo",
-					"subtitle": "اپلیکیشن موسیقی بی کلام",
+					"subtitle": "Instrumental Music App",
 					"time": "Sep 2020 - Present",
 					"type": "self-employed",
 					"tags": ["self-employed", "active"],
 					"position": "Full Stack Engineer",
 					"description":
-					"اپلیکیشن موسیقی بی کلام ملودیو که در این پروژه من وظیفه برنامه نویسی بک اند و فرانت اند و همچنین کار های دواپس پروژه را بر عهده داشتم."
+					"Melodyo instrumental music application, in which I was in charge of programming Back and Front, as well as dubbing the project."
 				},
 				{
 					"title": "Alibaba",
@@ -136,7 +136,7 @@
 					"type": "full-time",
 					"tags": ["full-time", "active"],
 					"position": "FrontEnd Developer",
-					"description": "توسعه دهنده فرانت اند در بخش پرواز داخلی و خارجی و کمک در توسعه وب سایت جدید علی بابا."
+					"description": "Front developer in domestic and international flight and assistance in the development of Alibaba's new website."
 				},
 				{
 					"title": "PaaSta",
@@ -146,7 +146,7 @@
 					"tags": ["self-employed", "active"],
 					"position": "FrontEnd Developer",
 					"description":
-					"پاستا فعالیت خود را در مسابقه برنامه نویسی ArvanCloud آغاز کرد و با تلاش اعضای تیم محصولی را تولید کردیم که استفاده از خدمات PaaS را تسهیل می کند. این محصول به شما کمک می کند بدون استفاده از ابزارهای یادگیری مانند Docker و Kubernetes ، منابع خود را به برنامه ها تبدیل کرده و برنامه های خود را در سرورهای PaaS مستقر کنید.\nپاستا در مسابقه ابر بازی ArvanCloud موفق به کسب رتبه دوم و همچنین در رویداد الکامپ استارز 1399 موفق به کسب رتبه دوم شد."
+					"Pasta started its activity in the ArvanCloud programming competition, and with the efforts of team members, we produced products that facilitate the use of PaaS services. This product helps you convert your resources into applications and deploy your applications on PaaS servers without the use of learning tools such as Docker and Kubernetes.\nPasta won second place in the ArvanCloud cloud game competition and also second place in the Elcamp Stars 2021 event."
 				},
 				{
 					"title": "Basalam",
@@ -156,7 +156,7 @@
 					"tags": ["contract"],
 					"position": "FrontEnd Consultant",
 					"description":
-					"مشاوره تیم FrontEnd شرکت باسلام در مورد بازنویسی کد و انتقال آن به Nuxt.js."
+					"Basalam FrontEnd team advises on rewriting the code and transferring it to Nuxt.js."
 				},
 				{
 					"title": "Raimun",
@@ -166,7 +166,7 @@
 					"tags": ["full-time"],
 					"position": "FrontEnd Team Lead",
 					"description":
-					"Raimun یک شرکت هولدینگ نرم افزار است و دارای نرم افزار در زمینه های مختلف فنی مانند RaiLive ، RaiHost ، RaiQ ، RaiArt است.\nدر ابتدا در سمت برنامه نویس فرانت اند و در نهایت به عنوان مدیر تیم فرانت اند فعالیت کردم."
+					"Raimun is a software holding company and has software in various technical fields such as RaiLive, RaiHost, RaiQ, RaiArt.\nI first worked as a front end programmer and eventually as a front end team manager."
 				},
 				{
 					"title": "TarHan",
@@ -176,7 +176,7 @@
 					"tags": ["full-time"],
 					"position": "Head of Tech",
 					"description":
-					"پلت فرم طراحی و چاپ آنلاین که هدف آن اصلاح ساختارهای چاپی و طراحی موجود در بازار است.\nبرنامه نویسی پلتفرم طراحان و سایر اپلیکیشن های مجموعه."
+					"A massive project to build a design and printing platform."
 				},
 				{
 					"title": "OpenGate",
@@ -186,7 +186,7 @@
 					"tags": ["freelance"],
 					"position": "FrontEnd Developer",
 					"description":
-					"پروژه ای برای مدیریت امور بیماران که برخی خدمات را برای پزشکان فراهم می کند.\nدر این پروژه برنامه نویسی فرانت اند پنل بک آفیس و مینی وب سایت مطب پزشکان را بر عهده داشتم."
+					"Front-end developer and consultant on building a doctor's office management project with the OpenGate team."
 				},
 				{
 					"title": "CafiMafi",
@@ -195,7 +195,7 @@
 					"type": "freelance",
 					"tags": ["freelance"],
 					"position": "FrontEnd Developer",
-					"description": "کافی مافی یک فروشگاه آنلاین است که کالاهای ضروری قهوه و کافه را می فروشد. برنامه نویسی کامل فرانت اند این پروژه و بخشی از بک اند این پروژه توسط من انجام شده است."
+					"description": "CafiMafi is an online store that sells essential coffee and coffee items. The complete programming of the front end of this project and part of the back end of this project was done by me."
 				},
 				{
 					"title": "PiroArch",
@@ -203,9 +203,9 @@
 					"time": "Jun 2016 - Aug 2016",
 					"type": "freelance",
 					"tags": ["freelance"],
-					"position": "مهندس نرم افزار",
+					"position": "Software Engineer",
 					"description":
-					"یک پروژه توسعه عمیق ساخته شده توسط نرم افزار مهندسی Inventor برای ایجاد پلاگین هایی برای افزایش سرعت ساخت و تولید قطعات صنعتی. این پروژه به این دلیل است که در ایران و حتی در جهان مردم کمی به این فن آوری تسلط دارند و می توانند مهندسی نرم افزار را کاملا شخصی سازی کنند و فعالیت هایی را انجام دهند که ممکن است با یک کلیک زمان ببرد و زمانبر باشد."
+					"An in-depth development project developed by the Inventor engineering software to create plugins to increase the speed of manufacturing and manufacturing of industrial components. This project is due to the fact that in Iran and even in the world people are a bit fluent in this technology and can completely personalize software engineering and take activities that may take normal time-consuming time in one Click to implement."
 				}
 			]
 		},
